src/compiler/snapshots/isa__compiler__parser__tests__strings-2.snap
---
source: src/compiler/parser.rs
expression: "create_parser(r#\"\"foo\\n\"\"#).parse_expr()"
---
Ok(
    Expr {
        kind: String(
            "foo\n",
        ),
        span: SpanData { file_id: 0, start: 0, end: 7 },
        ty: (),
    },
)
