src/compiler/snapshots/isa__compiler__parser__tests__strings-3.snap
---
source: src/compiler/parser.rs
expression: "create_parser(r#\"\"bar\\r\"\"#).parse_expr()"
---
Ok(
    Expr {
        kind: String(
            "bar\r",
        ),
        span: SpanData { file_id: 0, lo: 0, hi: 7 },
        ty: (),
    },
)
