src/compiler/snapshots/isa__compiler__parser__tests__strings-6.snap
---
source: src/compiler/parser.rs
expression: "create_parser(r#\"\"ba2\\0a\"\"#).parse_expr()"
---
Ok(
    Expr {
        kind: String(
            "ba2\0a",
        ),
        span: SpanData { file_id: 0, start: 0, end: 8 },
        ty: (),
    },
)
